Wed Feb 17 09:07:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        Simplified NodeManager

        * DAnCE/NodeManager/DAnCE_NodeManager_Module_Export.h
        * DAnCE/NodeManager/Node_Manager_Exec.cpp
        * DAnCE/NodeManager/NodeManager_Export.h
          Removed

        * DAnCE/NodeManager/Node_Manager.cpp
        * DAnCE/NodeManager/Node_Manager_Module.cpp
        * DAnCE/NodeManager/Node_Manager_Module.h
        * DAnCE/NodeManager/NodeManager.mpc
        * DAnCE/NodeManager/NodeManager_Impl.cpp
        * DAnCE/NodeManager/NodeManager_Impl.h
          Simplified

        * DAnCE/Plan_Launcher/Plan_Launcher_Base_Impl.cpp
          Fixed warning

Tue Feb 16 20:34:27 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * connectors/dds4ccm/idl/dds4ccm_Connector.idl:

          Removed the line '#define connector component' since we
          now have backend and frontend connector support.

        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector.mpc:

          Modified projects to generate and compile the
          connector implementation.

        * examples/BasicSP/BMClosedED/BMClosedED.idl:
        * tests/IDL_Test/IDL3_Plus/KitchenSink.idl:

          Cosmetic changes.

Tue Feb 16 20:04:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>

        Simplified execution manager

        * DAnCE/ExecutionManager/DAnCE_ExecutionManager_Module_Export.h
        * DAnCE/ExecutionManager/Execution_Manager_Exec.cpp
        * DAnCE/ExecutionManager/ExecutionManager_Export.h
          Removed

        * DAnCE/ExecutionManager/Execution_Manager.cpp
        * DAnCE/ExecutionManager/ExecutionManager.mpc
        * DAnCE/ExecutionManager/ExecutionManager_Impl.h
        * DAnCE/ExecutionManager/ExecutionManager_Module.cpp
        * DAnCE/ExecutionManager/ExecutionManager_Module.h
          Simplified

        * DAnCE/Plan_Launcher/Plan_Launcher.cpp:
          Layout changes
