@@ -1,3 +1,9 @@
+Wed Feb 17 09:21:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.cpp:
+        * connectors/dds4ccm/examples/Hello/Connector/Hello_Connector_exec.h:
+          Deleted, generated by tao_idl now
+
 Wed Feb 17 09:07:57 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         Simplified NodeManager
